--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>&lt;/salt&gt; :: ToDo</title>
     <link rel="stylesheet" type="text/css" href="./style/main.css" />
-    <script defer src="./js/todo.js"></script>
+    <script defer src="./bundle.js"></script>
   </head>
 
   <body>
